[gd_scene load_steps=12 format=3 uid="uid://chtdjj03druvg"]

[ext_resource type="Script" path="res://Scene/Level Select.gd" id="1_q4517"]
[ext_resource type="Texture2D" uid="uid://dxjt6pty0dw5r" path="res://Free/Background/Yellow.png" id="1_qmhe0"]
[ext_resource type="FontFile" uid="uid://b4nrpb124t46w" path="res://04B_30__.TTF" id="2_4tbdb"]
[ext_resource type="Texture2D" uid="uid://wrgs67crjgj" path="res://Free/Menu/Levels/01.png" id="3_l0hpi"]
[ext_resource type="Texture2D" uid="uid://c3vgk34s2xdtw" path="res://Free/Menu/Levels/02.png" id="4_fhank"]
[ext_resource type="Texture2D" uid="uid://b6m2wa22ixrkj" path="res://Free/Menu/Levels/03.png" id="5_73837"]
[ext_resource type="Texture2D" uid="uid://h80r23jhyscr" path="res://Free/Menu/Levels/01_hover.png" id="5_hp3da"]
[ext_resource type="Texture2D" uid="uid://d0oovjmof0mf4" path="res://Free/Menu/Buttons/Back.png" id="6_m32te"]
[ext_resource type="Texture2D" uid="uid://2cemfmj80vhi" path="res://Free/Menu/Levels/02_hover.png" id="7_boimf"]
[ext_resource type="Texture2D" uid="uid://bdqf15jaxsvxd" path="res://Free/Menu/Levels/03_hover.png" id="8_xp0x2"]
[ext_resource type="Texture2D" uid="uid://tghh4sp1f5l4" path="res://Free/Menu/Buttons/Back_hover.png" id="10_mo41m"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_q4517")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 4135.0
offset_bottom = 1824.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_qmhe0")
stretch_mode = 1

[node name="LevelSelectText" type="Label" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 317.0
offset_top = 159.0
offset_right = 812.0
offset_bottom = 210.0
theme_override_fonts/font = ExtResource("2_4tbdb")
theme_override_font_sizes/font_size = 50
text = "Level Select"

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_left = 287.0
offset_top = 342.0
offset_right = 842.0
offset_bottom = 548.0

[node name="LevelOne" type="TextureButton" parent="Control"]
texture_filter = 1
layout_mode = 1
offset_right = 19.0
offset_bottom = 17.0
scale = Vector2(7.5, 7.5)
pivot_offset = Vector2(9.92503, 8.11052)
size_flags_horizontal = 0
texture_normal = ExtResource("3_l0hpi")
texture_pressed = ExtResource("5_hp3da")
texture_hover = ExtResource("5_hp3da")

[node name="LevelTwo" type="TextureButton" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -9.5
offset_right = 9.5
offset_bottom = 17.0
grow_horizontal = 2
scale = Vector2(7.5, 7.5)
pivot_offset = Vector2(9.92503, 8.11052)
texture_normal = ExtResource("4_fhank")
texture_pressed = ExtResource("7_boimf")
texture_hover = ExtResource("7_boimf")

[node name="LevelThree" type="TextureButton" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -19.0
offset_bottom = 17.0
grow_horizontal = 0
scale = Vector2(7.5, 7.5)
pivot_offset = Vector2(9.92503, 8.11052)
texture_normal = ExtResource("5_73837")
texture_pressed = ExtResource("8_xp0x2")
texture_hover = ExtResource("8_xp0x2")

[node name="Back" type="TextureButton" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -7.5
offset_top = -16.0
offset_right = 7.5
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(7.5, 7.5)
pivot_offset = Vector2(7.2, 7.33334)
texture_normal = ExtResource("6_m32te")
texture_pressed = ExtResource("10_mo41m")
texture_hover = ExtResource("10_mo41m")

[connection signal="button_down" from="Control/LevelOne" to="." method="_on_level_one_button_down"]
[connection signal="button_up" from="Control/LevelOne" to="." method="_on_level_one_button_up"]
[connection signal="pressed" from="Control/LevelOne" to="." method="_on_level_one_pressed"]
[connection signal="button_down" from="Control/LevelTwo" to="." method="_on_level_two_button_down"]
[connection signal="button_up" from="Control/LevelTwo" to="." method="_on_level_two_button_up"]
[connection signal="pressed" from="Control/LevelTwo" to="." method="_on_level_two_pressed"]
[connection signal="button_down" from="Control/LevelThree" to="." method="_on_level_three_button_down"]
[connection signal="button_up" from="Control/LevelThree" to="." method="_on_level_three_button_up"]
[connection signal="pressed" from="Control/LevelThree" to="." method="_on_level_three_pressed"]
[connection signal="button_down" from="Control/Back" to="." method="_on_back_button_down"]
[connection signal="button_up" from="Control/Back" to="." method="_on_back_button_up"]
[connection signal="pressed" from="Control/Back" to="." method="_on_back_pressed"]
